--- a/app/sass/menu.sass
+++ b/app/sass/menu.sass
@@ -8,12 +8,19 @@
 	
 	
 .center
+	position: absolute
 	display: flex
 	height: 100%
 	width: 70%
 	background-color: #000
 	opacity: 0.5
 	position: fixed
+	border-left: 2px solid #000
+	border-right: 2px solid #000
+	&:before
+		height: 100%
+		width: 2px
+		background-color: #000
 
 .cntbgc
 	
@@ -26,6 +33,7 @@
 	border-left: 2px solid #000
 	border-right: 2px solid #000
 	justify-content: center
+
 
 	
 .menu ul
@@ -104,5 +112,7 @@ img
 .img img
 	height: 20%
 	margin: 20px
+pre
+
 	
 	
